tests/fixtures/invalid/bad_indentation.yaml.tftpl
main:
  steps:
    - initialize:
        assign:
          - value: "test"
  bad: indentation
